[gd_scene load_steps=3 format=3 uid="uid://cyd6r17jkelmm"]

[ext_resource type="Script" uid="uid://djmxutng3nqfv" path="res://gdscripts/end.gd" id="1_mwn6m"]

[sub_resource type="CanvasTexture" id="CanvasTexture_3d26k"]

[node name="End" type="Node"]
script = ExtResource("1_mwn6m")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.713726, 0.858824, 0.988235, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_3d26k")

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 27.0
offset_bottom = 153.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 91
text = "üéâ Ïù¥ÏïºÍ∏∞Ïùò ÎÅù! ÏàòÍ≥†ÌñàÏñ¥Ïöî, !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StroyLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
anchors_preset = 10
anchor_right = 1.0
offset_top = 190.0
offset_bottom = 403.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Í≤∞Îßê"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HomeButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -448.0
offset_right = 817.0
grow_vertical = 0
text = "ÌôàÏúºÎ°ú"

[node name="AnalyzeButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -729.0
offset_top = -448.0
grow_horizontal = 0
grow_vertical = 0
text = "Î∂ÑÏÑù"

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="AnalyzeButton" to="." method="_on_analyze_button_pressed"]
